--- a/rent_film/rent_film_app/src/app/start-button/start-button.component.html
+++ b/rent_film/rent_film_app/src/app/start-button/start-button.component.html
@@ -1,4 +1,4 @@
-<section class="start" style="background: #FF0000 url(assets/cinema.png); background-repeat: no-repeat; background-size:cover; background-position: center;">
+<section class="start" style="background: #FF0000 url(assets/popcorn6.jpg); background-repeat: no-repeat; background-size:cover; background-position: center;">
 
   <div class="example-button-container">
 
