--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,61 @@
 .viewport {
+
   height: 100%;
   width: 100%;
   border: 1px solid black;
 
 }
+#scroll-up
+{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  text-align: center;
+}
+
+.show {
+  visibility: visible;
+}
+body{
+  background: url(../../assets/popcorn11.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+}
+
+
+.search{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.serach-content{
+  display: block;
+  background-color: white;
+  width: 400px;
+  height: 60px;
+  margin: 20px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  border-radius: 60px;
+}
+
+
+.search-field .mat-mdc-text-field-wrapper {
+  border-radius: 25px;
+  height: 50px;
+  background-color: white;
+}
+
+.serach-content button{
+  margin-left: 20px;
+}
+
+
 
 .item {
   border: 1px solid black;
@@ -15,7 +67,6 @@
 }
 
 .start{
-  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -23,26 +74,19 @@
   flex-direction: column;
 }
 
-.button_more{
-  float: right;
-  margin-right:10px;
-  position: relative;
-  text-align: left;
-  clear: both;
-}
-
-.result-count{
-  color: aliceblue;
-
-}
-
 mat-card {
-  color: aliceblue;
-  opacity: 0.9;
   padding: 1%;
-  font-family: Arial, Helvetica, sans-serif;
   border: 1px solid;
   box-shadow: 0px 0px 21px 0px #000000;
+
+}
+
+mat-card:hover{
+  cursor: pointer;
+  -ms-transform: scale(1.1,1.1);
+  -webkit-transform: scale(1.1,1.1);
+  -moz-transform: scale(1.1,1.1);
+  -o-transform: scale(1.1,1.1);
 
 }
 
@@ -53,6 +97,28 @@ mat-card-content a{
 
 .title{
   text-decoration: none;
-  color: aliceblue;
+  color: black;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-size: 20px;
+  padding-bottom: 10px;
+
+
+}
+.title:hover{
+  font-size: 25px;
+
 }
 
+.paginator-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.paginator {
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius:50px;
+}
