--- a/rent_film/rent_film_app/src/app/start-button/start-button.component.css
+++ b/rent_film/rent_film_app/src/app/start-button/start-button.component.css
@@ -16,12 +16,23 @@
 }
 
 .example-button-container button{
-  border-radius: 10%;
-  width: 30%;
-  height: 30%;
-  margin-right: 1%;
-  margin-left: 1%;
-  opacity: 0.8;
+  background-color: #960018;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 15px;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 50px;
+  min-height: 30px;
+  min-width: 120px;
+  cursor: pointer;
+}
+
+.example-button-container button:hover{
+  background-color: #FFF5EE;
+  color: black;
+  transition: 0.7s;
 }
 
 
