--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -1,6 +1,6 @@
-<toolbar #toolbar></toolbar>
+<toolbar #toolbar class="theme2-toolbar"></toolbar>
 
 <!--attiva la componente che verrà chiamata con router link -->
-<router-outlet></router-outlet>
+<router-outlet class="theme2-other"></router-outlet>
 
 
