--- a/rent_film/rent_film_app/src/app/start-button/start-button.component.html
+++ b/rent_film/rent_film_app/src/app/start-button/start-button.component.html
@@ -1,5 +1,5 @@
-<section class="start" style="background: #FF0000 url(assets/popcorn6.jpg); background-repeat: no-repeat; background-size:cover; background-position: center;">
 
+<section class="start" [ngClass]="currentTheme">
   <div class="example-button-container">
 
         <button mat-raised-button (click)="film_dashboard()"> <a>Tutti i Film </a></button>
