--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
@@ -5,6 +5,15 @@
   border: 1px solid black;
 
 }
+
+body{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+}
+
 #scroll-up
 {
   position: fixed;
@@ -15,14 +24,6 @@
 
 .show {
   visibility: visible;
-}
-body{
-  background: url(../../assets/popcorn11.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 100vh;
 }
 
 
@@ -35,7 +36,6 @@ body{
 
 .serach-content{
   display: block;
-  background-color: white;
   width: 400px;
   height: 60px;
   margin: 20px;
@@ -48,7 +48,6 @@ body{
 .search-field .mat-mdc-text-field-wrapper {
   border-radius: 25px;
   height: 50px;
-  background-color: white;
 }
 
 .serach-content button{
@@ -59,7 +58,7 @@ body{
 
 .item {
   border: 1px solid black;
-  margin:5%;
+  margin-top:5%;
   margin-right: 10%;
   margin-left: 10%;
   height: auto;
@@ -81,12 +80,8 @@ mat-card {
 
 }
 
-mat-card:hover{
+.details:hover{
   cursor: pointer;
-  -ms-transform: scale(1.1,1.1);
-  -webkit-transform: scale(1.1,1.1);
-  -moz-transform: scale(1.1,1.1);
-  -o-transform: scale(1.1,1.1);
 
 }
 
@@ -97,7 +92,6 @@ mat-card-content a{
 
 .title{
   text-decoration: none;
-  color: black;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bold;
   font-size: 20px;
@@ -122,3 +116,6 @@ mat-card-content a{
   margin-bottom: 20px;
   border-radius:50px;
 }
+
+
+
