--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,15 @@
 <body title="Dashboard" [ngClass]="currentTheme" class="start">
+  <mat-drawer-container >
+    <mat-drawer #drawer mode="side">
+      <a>Seleziona un genere:</a>
+      <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedOption">
+        <mat-radio-button *ngFor="let category of categories" [value]="category">
+          <span class="radio-label">{{category}}</span>
+        </mat-radio-button>
+      </mat-radio-group>
+      <br>
+      <button mat-button color="warn" (click)="filterByCategory(selectedOption)">Filtra</button>
+    </mat-drawer>
 
   <form role="search-bar" class="search">
     <div class="serach-content"
@@ -7,31 +18,28 @@
         <input matInput placeholder="Scegli un film" type="text" [formControl]="searchControl"/>
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
-
-      <button  mat-icon-button color="warn"
-      aria-label="Icon button filter"
-      tabindex="0">  <mat-icon >
-        filter_list
-      </mat-icon> </button>
-
-
+      <button  mat-icon-button color="warn" aria-label="Icon button filter"  tabindex="0" (click)="drawer.toggle()">
+        <mat-icon > filter_list </mat-icon>
+      </button>
     </div>
   </form>
+
   <section role="list-film" >
     <mat-card  class="item" *ngFor="let film of films | slice: startIndex: endIndex"  [style.background-color]="coloreCard" [style.color]="coloreTextCard">
       <mat-card-header>
         <mat-card-title class="title">
-             {{film.title }}
+             {{film.film.title }}
         </mat-card-title>
       </mat-card-header>
+
       <mat-card-content>
         <p>{{ film.description }}</p>
         <p> <a>Anno:</a> {{ film.release_year }}</p>
+        <p> <a>Genere:</a> {{ film.category}}</p>
         <p>{{ film.rating }}</p>
-
-
         <!-- Altri dettagli del film -->
       </mat-card-content>
+
       <mat-card-actions align="start"  >
         <button cdkMonitorSubtreeFocus
         class="details" mat-button
@@ -81,6 +89,8 @@
       <mat-icon>arrow_upward</mat-icon>
     </button>
     </div>
+
+  </mat-drawer-container>
 </body>
 
 
