Aggiornamento del branch main rispetto al branch locale

--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -15,7 +15,7 @@
 
           <!-- Contenuto matcard-->
           <mat-card-content>
-            <p>{{ rent.rental_date }}</p>
+            <p>{{ rent.rental.rental_date }}</p>
           </mat-card-content>
 
           <!-- Azioni matcard: bottone per visualizzare i dettagli di un noleggio-->
