--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -33,10 +33,10 @@
       </mat-card-header>
 
       <mat-card-content>
-        <p>{{ film.description }}</p>
-        <p> <a>Anno:</a> {{ film.release_year }}</p>
-        <p> <a>Genere:</a> {{ film.category}}</p>
-        <p>{{ film.rating }}</p>
+        <p>{{ film.film.description }}</p>
+        <p> <a>Anno:</a> {{ film.film.release_year }}</p>
+        <p> <a>Genere:</a> {{ film.category.name}}</p>
+        <p>{{ film.film.rating }}</p>
         <!-- Altri dettagli del film -->
       </mat-card-content>
 
@@ -61,7 +61,7 @@
         tabindex="0"
         [style.color]="coloreTextCard"
         (click)="rent_page(film)">
-          {{ film.rental_rate}}
+          {{ film.film.rental_rate}}
           <mat-icon>
             <span class="material-symbols-outlined">euro</span>
           </mat-icon>
