--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <a>Seleziona un genere:</a>
       <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedOption">
         <mat-radio-button *ngFor="let category of categories" [value]="category">
-          <span class="radio-label">{{category}}</span>
+          <span class="radio-label">{{category.name}}</span>
         </mat-radio-button>
       </mat-radio-group>
       <br>
@@ -37,13 +37,14 @@
         <p> <a>Anno:</a> {{ film.film.release_year }}</p>
         <p> <a>Genere:</a> {{ film.category.name}}</p>
         <p>{{ film.film.rating }}</p>
+        <p>ID: {{film.film.film_id}}</p>
         <!-- Altri dettagli del film -->
       </mat-card-content>
 
       <mat-card-actions align="start"  >
         <button cdkMonitorSubtreeFocus
         class="details" mat-button
-        (click)="openDialog(film)"
+        (click)="openDetails(film)"
         tabindex="0"
         [style.color]="coloreTextCard">
           Dettagli
@@ -60,7 +61,8 @@
         <button mat-button
         tabindex="0"
         [style.color]="coloreTextCard"
-        (click)="rent_page(film)">
+        (click)="rent_page(film)"
+        >
           {{ film.film.rental_rate}}
           <mat-icon>
             <span class="material-symbols-outlined">euro</span>
