--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.html
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.html
@@ -11,20 +11,20 @@
     </mat-card-actions>
 
 
-    <h2 mat-dialog-title>{{ film.title }}</h2>
+    <h2 mat-dialog-title>{{ film.film.title }}</h2>
   </div>
   <div class="dialog-content" >
-      <p><strong>Genere:</strong> {{ film.film_id }}</p>
-      <p><strong>Genere:</strong> {{ film.title }}</p>
-      <p><strong>Genere:</strong> {{ film.title }}</p>
+      <p><strong>Genere:</strong> {{ film.film.film_id }}</p>
+      <p><strong>Genere:</strong> {{ film.film.title }}</p>
+      <p><strong>Genere:</strong> {{ film.film.title }}</p>
 
-      <p><strong>Genere:</strong> {{ film.title }}</p>
-      <p><strong>Descrizione:</strong> {{ film.description }}</p>
+      <p><strong>Genere:</strong> {{ film.category.name }}</p>
+      <p><strong>Descrizione:</strong> {{ film.film.description }}</p>
 
       <mat-form-field>
         <mat-label>Store</mat-label>
         <mat-select >
-          <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film" (click)="click(matOption.selected)">{{store.address}}</mat-option>
+          <mat-option #matOption *ngFor="let store of film.stores" [value]="store" [disabled]="!store.num_film" (click)="click(matOption.selected)">{{store.address.address}}</mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -35,8 +35,8 @@
         [style.color]="coloreTextCard"
         class="button-rent"
         [disabled]="!storeSelected"
-        (click)="rent_page()">
-          {{ film.rental_rate}}
+        (click)="rent_page(film)">
+          {{ film.film.rental_rate}}
           <mat-icon>
             <span class="material-symbols-outlined">euro</span>
           </mat-icon>
