--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,63 +1,37 @@
-<main title="User Rental List" [ngClass]="currentTheme" class="start">
+<div class="search">
+    <div class="serach-content"
+    [style.background-color]="coloreCard" >
+    Spesa totale: {{ totalAmount}}
+    <mat-icon matPrefix> euro </mat-icon>
+  </div>
+</div>
 
-  <!-- Sezione lista noleggi -->
-  <section role="list-rental">
+<table mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
+  <!-- Colonna Film -->
+  <ng-container matColumnDef="film">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Film </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.film.title }} </td>
+  </ng-container>
 
-      <!-- Creazione di una matcard per visualizzare i dati di ogni noleggio in 'rentals' -->
-      <mat-card class="item" *ngFor="let rent of rentals | slice: startIndex: endIndex"  [style.background-color]="coloreCard" [style.color]="coloreTextCard" aria-describedby="list-rental-description">
+  <!-- Colonna Indirizzo -->
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Indirizzo </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.address.address }} </td>
+  </ng-container>
 
-          <!-- Intestazione matcard -->
-          <mat-card-header>
-            <mat-card-title class="title" aria-describedby="rental-data">
-                 {{rent.film.title }}
-            </mat-card-title>
-          </mat-card-header>
+  <!-- Colonna Pagamento -->
+  <ng-container matColumnDef="payment">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagamento </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
+  </ng-container>
 
-          <!-- Contenuto matcard-->
-          <mat-card-content>
-            <p>{{ rent.rental.rental_date }}</p>
-          </mat-card-content>
+  <!-- Colonna Noleggio -->
+  <ng-container matColumnDef="rental">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Noleggio </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
+  </ng-container>
 
-          <!-- Azioni matcard: bottone per visualizzare i dettagli di un noleggio-->
-          <mat-card-actions align="start">
-              <button class="details" mat-button tabindex="0" [style.color]="coloreTextCard" aria-describedby="descrizione-dettagli">
-                Dettagli
-                <mat-icon>
-                  <span class="material-symbols-outlined">add</span>
-                </mat-icon>
-              </button>
-
-              <!-- Descrizione dei dettagli -->
-              <p id="descrizione-dettagli" style="display: none;">
-                  Questo bottone consente di visualizzare ulteriori dettagli del noleggio selezionato.
-              </p>
-          </mat-card-actions>
-
-
-
-      </mat-card>
-
-      <!-- Descrizione del contenuto della sezione lista noleggi -->
-      <div id="list-rental-description" style="display: none;">
-          Questa sezione mostra l'elenco dei noleggi effettuati e la spesa totale effettuata
-      </div>
-
-  </section>
-
-
-  <!-- Sezione paginazione -->
-  <section role="select-page" class="paginator-div" aria-controls="rental-pagination">
-
-      <mat-paginator
-          [length]="rentals.length"
-          [pageSize]="pageSize"
-          [pageIndex]="pageIndex"
-          [pageSizeOptions]="pageSizeOptions"
-          (page)="onPageChange($event)"
-          showFirstLastButtons
-          class="paginator"
-          id="rental-pagination"
-      ></mat-paginator>
-
-  </section>
-</main>
+  <!-- Definizione delle colonne -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
+</table>
