--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -1,25 +1,43 @@
-<div class="login" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
-  <mat-card [style.background-color]="coloreCard" [style.color]="coloreTextCard">
-    <mat-card-title>
-      Login
-    </mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="login()">
-        <mat-form-field>
-          <input matInput placeholder="Username" formControlName="email" [(ngModel)]="email" name="email">
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password"
-            type="password">
-        </mat-form-field>
-        <br>
-        <button mat-raised-button color="primary" type="submit">Login</button>
-        <br>
-        <button mat-raised-button color="primary" [routerLink]="['/registration']">Registrati</button>
-        <br>
-        <p *ngIf="error" class="error-message">{{ error }}</p>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Rent DVD APP</title>
+</head>
+
+<body>
+  <main>
+    <section aria-label="Page Content">
+      <div class="login" aria-label="login-form-page" role="form" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
+
+        <mat-card [style.background-color]="coloreCard" [style.color]="coloreTextCard">
+
+          <mat-card-content>
+
+            <mat-card-title>Login</mat-card-title>
+
+            <form [formGroup]="form" (ngSubmit)="login()" role="form" aria-label="login-form">
+
+              <mat-form-field>
+                <input matInput placeholder="Username" formControlName="email" [(ngModel)]="email" name="email" aria-label="Username">
+              </mat-form-field>
+
+              <mat-form-field>
+                <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password" type="password" aria-label="Username">
+              </mat-form-field>
+
+              <button mat-raised-button color="primary" type="submit" role="button" title="Clicca qui per effettuare il login" aria-labelledby="login button">Login</button>
+              <button mat-raised-button color="primary" [routerLink]="['/registration']" role="button" title="Clicca qui per registrare un nuovo utente" aria-labelledby="register button">Registrati</button>
+              <p *ngIf="error" class="error-message">{{ error }}</p>
+
+            </form>
+
+          </mat-card-content>
+        </mat-card>
+
+      </div>
+    </section>
+  </main>
+</body>
+
+</html>
