--- a/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
+++ b/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
@@ -1,36 +1,24 @@
-  <mat-toolbar [ngClass]="currentTheme"
-  role="toolbar"
-  aria-label="App Toolbar"
-  aria-orientation="horizontal"
-  class="toolbar">
+<html lang = "en-US">
+  <meta charset="UTF-8">
+  
+  <mat-toolbar [ngClass]="currentTheme" role="toolbar" aria-label="app-toolbar" aria-orientation="horizontal" class="toolbar">
 
-    <button mat-button (click)="home()"  aria-label="Go to Home" tabindex="1">
-      My App
-    </button>
-    <span class="example-spacer"></span>
+    <button mat-button (click)="home()" aria-label="back-home" role="button" title="Clicca qui per tornare alla lista dei film" aria-labelledby="back home button"> DVD Rent </button>
+    <span class="spacer"></span>
 
-    <button mat-button  [matMenuTriggerFor]="menu"
-    aria-label="Open Menu"
-    tabindex="2"
-    aria-haspopup="true">
+    <button mat-button  [matMenuTriggerFor]="menu" aria-label="open menu" role="button" title="Clicca qui per aprire il menù a tendina" aria-haspopup="true" aria-controls="menu-items">
       <mat-icon>account_circle</mat-icon></button>
-    <mat-menu #menu="matMenu">
+    
+      <mat-menu #menu="matMenu" role="menu" aria-label="app menu" aria-orientation="vertical">
 
-      <button mat-menu-item tabindex="0" >
-        <mat-icon>
-          <span class="material-symbols-outlined">face</span>
-        </mat-icon >
-        <span>Profilo</span>
+        <button mat-menu-item (click)="rentalList()" role="menuitem" aria-labelledby="logout menu button" title="Clicca qui per aprire i tuoi noleggi">
+          <mat-icon> 
+            <span class="material-symbols-outlined">list_alt</span>
+          </mat-icon >
+          <span>Noleggi </span>
       </button>
 
-      <button mat-menu-item tabindex="0"  (click)="rentalList()">
-        <mat-icon>
-          <span class="material-symbols-outlined">list_alt</span>
-        </mat-icon >
-        <span>Noleggi </span>
-      </button>
-
-      <button mat-menu-item  (click)="logout()" tabindex="0" >
+      <button mat-menu-item  (click)="logout()" role="menuitem" aria-labelledby="your rentals menu button" title="Clicca qui per fare il logout">
         <mat-icon>
           <span class="material-symbols-outlined">logout</span>
         </mat-icon >
@@ -57,7 +45,7 @@
 
   <router-outlet></router-outlet>
 
-
+</html>
 
 
 
