--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,38 +1,35 @@
-<div class="login" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
-  <mat-card  [style.background-color]="coloreCard" [style.color]="coloreTextCard" >
-    <mat-card-title >
-      {{film.film.title}}
-      <br>
-    </mat-card-title>
-    <mat-card-content >
-      <form [formGroup]="form" (ngSubmit)="rent()">
-        Da quando vuoi far partire il tuo noleggio?
-        <br>
-        <br>
-        <mat-form-field  >
-          <mat-label>Seleziona una data</mat-label>
-          <mat-select #dayOption formControlName="data"  >
-            <mat-option  value="today"  (click)="click_data(true)">Oggi</mat-option>
-            <mat-option  value="in-two-days"  (click)="click_data(true)">Entro due giorni</mat-option>
-          </mat-select>
-        </mat-form-field>
+<section class="container">
+  <div class="login" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
+    <mat-card [style.background-color]="coloreCard" [style.color]="coloreTextCard">
+      <div class="card-title">
+        <strong>{{film.film.title}}</strong>
+      </div>
+      <div class="card-content">
+        <form [formGroup]="form" (ngSubmit)="rent()">
+          <label for="data">Da quando vuoi far partire il tuo noleggio?</label>
+          <br>
+          <mat-form-field>
+            <mat-label>Seleziona una data</mat-label>
+            <mat-select #dayOption formControlName="data">
+              <mat-option value="today" (click)="click_data(true)">Oggi</mat-option>
+              <mat-option value="in-two-days" (click)="click_data(true)">Entro due giorni</mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field >
-          <mat-label>Store</mat-label>
-          <mat-select formControlName="store" >
-            <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film" (click)="click_store(matOption.selected)" >{{store.address.address}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <br>
+          <mat-form-field>
+            <mat-label>Store</mat-label>
+            <mat-select formControlName="store">
+              <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film"
+                (click)="click_store(matOption.selected)">{{store.address.address}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br>
 
-        <button mat-raised-button color="accent" type="submit">Noleggia</button>
+          <button mat-raised-button color="accent" type="submit">Noleggia</button>
 
-
-        <p *ngIf="error" class="error-message">{{ error }}</p>
-
-
-    </form>
-    </mat-card-content>
-
-  </mat-card>
-</div>
+          <div *ngIf="error" class="error-message">{{ error }}</div>
+        </form>
+      </div>
+    </mat-card>
+  </div>
+</section>
