--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,12 +1,31 @@
 <div class="search">
     <div class="serach-content"
     [style.background-color]="coloreCard" >
-    Spesa totale: {{ totalAmount}}
-    <mat-icon matPrefix> euro </mat-icon>
+    <p><strong>Spesa totale:</strong> {{ totalAmount}}
+    <mat-icon>  <span class="material-symbols-outlined">euro</span> </mat-icon> </p>
+
+  <button (click)="isDropdownOpen = !isDropdownOpen" mat-raised-button>
+    Ordina</button>
   </div>
 </div>
 
-<table mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
+
+<div class="button-row" *ngIf="isDropdownOpen">
+  <div class="button-container" *ngFor="let column of columns_title; let i = index">
+    <button mat-button [matMenuTriggerFor]="menu">{{ column }}</button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button>
+      <button mat-menu-item (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button>
+    </mat-menu>
+  </div>
+</div>
+
+
+
+
+
+<section class="container">
+<table mat-table  [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
   <!-- Colonna Film -->
   <ng-container matColumnDef="film">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Film </th>
@@ -27,11 +46,19 @@
 
   <!-- Colonna Noleggio -->
   <ng-container matColumnDef="rental">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Noleggio </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Data noleggio </th>
     <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
+  </ng-container>
+
+  <!-- Colonna Noleggio -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>  </th>
+    <td mat-cell *matCellDef="let rental"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
   </ng-container>
 
   <!-- Definizione delle colonne -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
 </table>
+
+</section>
