--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <body title="Dashboard" [ngClass]="currentTheme" class="start">
-  <mat-drawer-container >
+  <mat-drawer-container>
     <mat-drawer #drawer mode="side">
       <a>Seleziona un genere:</a>
       <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedOption">
@@ -8,93 +8,73 @@
         </mat-radio-button>
       </mat-radio-group>
       <br>
-      <button mat-button color="warn" (click)="filterByCategory(selectedOption)">Filtra</button>
+      <button class="filter" mat-raised-button color="accent" (click)="filterByCategory(selectedOption)">Filtra</button>
     </mat-drawer>
 
-  <form role="search-bar" class="search">
-    <div class="serach-content"
-    [style.background-color]="coloreCard" >
-      <mat-form-field  class="search-field">
-        <input matInput placeholder="Scegli un film" type="text" [formControl]="searchControl"/>
-        <mat-icon matPrefix>search</mat-icon>
-      </mat-form-field>
-      <button  mat-icon-button color="warn" aria-label="Icon button filter"  tabindex="0" (click)="drawer.toggle()">
-        <mat-icon > filter_list </mat-icon>
+    <form role="search-bar" class="search">
+      <div class="serach-content" [style.background-color]="coloreCard">
+        <mat-form-field class="search-field">
+          <input matInput placeholder="Scegli un film" type="text" [formControl]="searchControl" />
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+        <button mat-icon-button color="warn" aria-label="Icon button filter" tabindex="0" (click)="drawer.toggle()">
+          <mat-icon>filter_list</mat-icon>
+        </button>
+      </div>
+    </form>
+
+    <section role="list-film">
+      <mat-card class="item" *ngFor="let film of films | slice: startIndex: endIndex" [style.background-color]="coloreCard" [style.color]="coloreTextCard">
+        <mat-card-header>
+          <mat-card-title class="title">
+            {{film.film.title}}
+          </mat-card-title>
+        </mat-card-header>
+
+        <mat-card-content>
+          <p>{{ film.film.description }}</p>
+          <p><a>Anno:</a> {{ film.film.release_year }}</p>
+          <p><a>Genere:</a> {{ film.category.name }}</p>
+          <p>{{ film.film.rating }}</p>
+          <p>ID: {{film.film.film_id}}</p>
+          <!-- Altri dettagli del film -->
+        </mat-card-content>
+
+        <mat-card-actions align="start">
+          <button cdkMonitorSubtreeFocus class="details" mat-button (click)="openDetails(film)" tabindex="0" [style.color]="coloreTextCard">
+            Dettagli
+            <mat-icon>
+              <span class="material-symbols-outlined">add</span>
+            </mat-icon>
+          </button>
+        </mat-card-actions>
+
+        <p *ngIf="error" class="error-message">{{ error }}</p>
+
+        <mat-card-actions align="end">
+          <button mat-button tabindex="0" [style.color]="coloreTextCard" (click)="rent_page(film)">
+            {{ film.film.rental_rate }}
+            <mat-icon>
+              <span class="material-symbols-outlined">euro</span>
+            </mat-icon>
+            NOLEGGIA
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </section>
+    <section role="select-page" class="paginator-div">
+      <!-- Paginazione -->
+      <mat-paginator [length]="films.length" [pageSize]="pageSize" [pageIndex]="pageIndex" [pageSizeOptions]="pageSizeOptions" (page)="onPageChange($event)"
+        showFirstLastButtons class="paginator">
+      </mat-paginator>
+    </section>
+
+    <div id="scroll-up">
+      <!-- Bottone per tornare all'inizio della pagina -->
+      <button mat-fab class="back-to-top-button" *ngIf="scrolled == 1" (click)="scrollToTop()" [class.show]="isScrolled">
+        <mat-icon>arrow_upward</mat-icon>
       </button>
-    </div>
-  </form>
-
-  <section role="list-film" >
-    <mat-card  class="item" *ngFor="let film of films | slice: startIndex: endIndex"  [style.background-color]="coloreCard" [style.color]="coloreTextCard">
-      <mat-card-header>
-        <mat-card-title class="title">
-             {{film.film.title }}
-        </mat-card-title>
-      </mat-card-header>
-
-      <mat-card-content>
-        <p>{{ film.film.description }}</p>
-        <p> <a>Anno:</a> {{ film.film.release_year }}</p>
-        <p> <a>Genere:</a> {{ film.category.name}}</p>
-        <p>{{ film.film.rating }}</p>
-        <p>ID: {{film.film.film_id}}</p>
-        <!-- Altri dettagli del film -->
-      </mat-card-content>
-
-      <mat-card-actions align="start"  >
-        <button cdkMonitorSubtreeFocus
-        class="details" mat-button
-        (click)="openDetails(film)"
-        tabindex="0"
-        [style.color]="coloreTextCard">
-          Dettagli
-          <mat-icon>
-            <span class="material-symbols-outlined">add</span>
-          </mat-icon>
-
-        </button>
-      </mat-card-actions>
-
-      <p *ngIf="error" class="error-message">{{ error }}</p>
-
-      <mat-card-actions align="end" >
-        <button mat-button
-        tabindex="0"
-        [style.color]="coloreTextCard"
-        (click)="rent_page(film)"
-        >
-          {{ film.film.rental_rate}}
-          <mat-icon>
-            <span class="material-symbols-outlined">euro</span>
-          </mat-icon>
-          NOLEGGIA
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </section>
-  <section role="select-page" class="paginator-div" >
-  <!-- Paginazione -->
-      <mat-paginator
-        [length]="films.length"
-        [pageSize]="pageSize"
-        [pageIndex]="pageIndex"
-        [pageSizeOptions]="pageSizeOptions"
-        (page)="onPageChange($event)"
-        showFirstLastButtons
-        class="paginator"
-      ></mat-paginator>
-  </section>
-
-  <div id="scroll-up">
-    <!-- Bottone per tornare all'inizio della pagina -->
-    <button mat-fab class="back-to-top-button" *ngIf="scrolled == 1" (click)="scrollToTop()"  [class.show]="isScrolled">
-      <mat-icon>arrow_upward</mat-icon>
-    </button>
     </div>
 
   </mat-drawer-container>
 </body>
-
-
-
-
