--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -10,8 +10,7 @@
         </mat-form-field>
         <br />
         <mat-form-field>
-          <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password"
-            type="password">
+          <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password" type="password">
         </mat-form-field>
         <br>
         <button mat-raised-button color="primary" type="submit">Login</button>
