--- a/rent_film/rent_film_app/src/app/toolbar/toolbar.component.css
+++ b/rent_film/rent_film_app/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,13 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+.toolbar{
 
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .toolbar {
+    flex-wrap: wrap;
+  }
+
+}
