--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -1,4 +1,25 @@
-<toolbar #toolbar class="theme2-toolbar"></toolbar>
+<!DOCTYPE html>
+<html lang="en">
 
-<!--attiva la componente che verrà chiamata con router link -->
-<router-outlet class="theme2-other"></router-outlet>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Angular Website</title>
+</head>
+<body>
+  <header>
+    <toolbar #toolbar class="theme2-toolbar"></toolbar>
+
+
+  </header>
+
+
+  <main>
+  <!--attiva la componente che verrà chiamata con router link -->
+  <router-outlet class="theme2-other"></router-outlet>
+  </main>
+
+  <footer>
+    <!-- Contenuto del tuo footer -->
+  </footer>
+</body>
