--- a/rent_film/rent_film_app/src/app/login/login.component.css
+++ b/rent_film/rent_film_app/src/app/login/login.component.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
   height: 100%;
 }
 
@@ -25,8 +26,26 @@ mat-card mat-card-title{
   padding-bottom: 20px;
 }
 
-.button-flex-container {
+.div_button{
   display: flex;
-  width: 100%;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.div_button button{
+  width: 100px;
+  margin-bottom: 10px;
+}
+
+
+@media screen and (max-width: 768px) {
+.login {
+  padding: 20px;
+}
+
+mat-card {
+  padding: 40px;
+}
+
 }
