--- a/rent_film/rent_film_app/src/app/registration/registration.component.css
+++ b/rent_film/rent_film_app/src/app/registration/registration.component.css
@@ -1,32 +1,72 @@
-.login {
+.registration {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100%;
+  justify-content: center;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 20px;
+  color: black;
 }
 
 mat-card {
-  height: auto;
-  width: auto;
-  padding: 80px;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
 }
-mat-card-content{
+
+
+.card-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.card-content {
+  text-align: center;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-
 }
 
 
-mat-card mat-card-title{
-  font-size: 200%;
-  padding-bottom: 20px;
-}
-
-.button-flex-container {
-  display: flex;
+button[type="submit"] {
   width: 100%;
-  justify-content: flex-end;
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+}
+
+/* Responsive styles */
+
+@media (max-width: 600px) {
+  .login{
+    padding: 10px;
+  }
+
+  mat-card {
+    padding: 10px;
+  }
+
+  .card-title {
+    font-size: 20px;
+  }
+
+  .card-content {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 400px) {
+  .card-title {
+    font-size: 18px;
+  }
+
+  .card-content {
+    font-size: 12px;
+  }
 }
