--- a/rent_film/rent_film_app/src/app/registration/registration.component.html
+++ b/rent_film/rent_film_app/src/app/registration/registration.component.html
@@ -1,35 +1,35 @@
 <div class="registration">
   <mat-card>
-    <mat-card-title>
-      Registration
+    <mat-card-title  class="card-title">
+      <strong>Registration</strong>
     </mat-card-title>
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="register()">
         <mat-form-field>
           <input matInput placeholder="Customer ID" formControlName="customer_id">
         </mat-form-field>
-        <br>
+
         <mat-form-field>
           <input matInput placeholder="First Name" formControlName="first_name">
         </mat-form-field>
-        <br>
+
         <mat-form-field>
           <input matInput placeholder="Last Name" formControlName="last_name">
         </mat-form-field>
-        <br>
+
         <mat-form-field>
           <input matInput placeholder="Email" formControlName="email">
           <mat-error *ngIf="form.controls['email'].hasError('required')">Email is required</mat-error>
           <mat-error *ngIf="form.controls['email'].hasError('email')">Invalid email</mat-error>
         </mat-form-field>
-        <br>
+
         <mat-form-field>
           <input matInput placeholder="Password" formControlName="password" type="password">
           <mat-error *ngIf="form.controls['password'].hasError('required')">Password is required</mat-error>
           <mat-error *ngIf="form.controls['password'].hasError('minlength')">Password must be at least 6 characters</mat-error>
         </mat-form-field>
-        <br>
-        <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Register</button>
+
+        <button mat-raised-button color="accent" type="submit">Registrati</button>
         <br>
         <p *ngIf="error" class="error-message">{{ error }}</p>
       </form>
