--- a/rent_film/rent_film_app/src/app/rent/rent.component.css
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.css
@@ -1,60 +1,74 @@
 .login {
-  display: block;
-  justify-content: center;
+  display: flex;
   align-items: center;
-  padding-left: 30%;
-  padding-right: 30%;
-  height: 100%;
-  margin:40px;
+  justify-content: center;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 20px;
   color: black;
-
-}
-
-
-@media only screen and (min-width: 500px) {
-	.login {
-
-  padding-left: 10%;
-  padding-right: 10%;
-
-  }
-}
-
-@media only screen and (max-width: 600px) {
-	.login {
-
-    margin: 500px;
-
-  }
 }
 
 mat-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  height: auto;
-  width: auto;
-  padding: 80px;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
 }
-mat-card-content{
-  border: 1px solid black;
+
+.card-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.card-content {
+  text-align: center;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-
 }
 
-
-mat-card mat-card-title{
-  font-size: 200%;
-  padding-bottom: 20px;
+mat-form-field {
+  margin-bottom: 10px;
 }
 
-.button-flex-container {
-  display: flex;
+button[type="submit"] {
   width: 100%;
-  justify-content: flex-end;
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+}
+
+/* Responsive styles */
+
+@media (max-width: 600px) {
+  .login{
+    padding: 10px;
+  }
+
+  mat-card {
+    padding: 10px;
+  }
+
+  .card-title {
+    font-size: 20px;
+  }
+
+  .card-content {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 400px) {
+  .card-title {
+    font-size: 18px;
+  }
+
+  .card-content {
+    font-size: 12px;
+  }
 }
