--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,37 +1,63 @@
 <div class="search">
-    <div class="serach-content"
+  <div class="serach-content"
     [style.background-color]="coloreCard" >
-    Spesa totale: {{ totalAmount}}
-    <mat-icon matPrefix> euro </mat-icon>
+    <div><p><strong>Spesa totale:</strong> {{ totalAmount}}
+    </div>
+    <button  aria-label="Button order"  (click)="isDropdownOpen = !isDropdownOpen" mat-raised-button>
+      Ordina</button>
   </div>
 </div>
 
-<table mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
-  <!-- Colonna Film -->
-  <ng-container matColumnDef="film">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Film </th>
-    <td mat-cell *matCellDef="let rental"> {{ rental.film.title }} </td>
-  </ng-container>
 
-  <!-- Colonna Indirizzo -->
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Indirizzo </th>
-    <td mat-cell *matCellDef="let rental"> {{ rental.address.address }} </td>
-  </ng-container>
+<div class="button-row" *ngIf="isDropdownOpen">
+  <div class="button-container" *ngFor="let column of columns_title; let i = index">
+    <button mat-button [matMenuTriggerFor]="menu">{{ column }}</button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button>
+      <button mat-menu-item (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button>
+    </mat-menu>
+  </div>
+</div>
 
-  <!-- Colonna Pagamento -->
-  <ng-container matColumnDef="payment">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagamento </th>
-    <td mat-cell *matCellDef="let rental"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
-  </ng-container>
 
-  <!-- Colonna Noleggio -->
-  <ng-container matColumnDef="rental">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Noleggio </th>
-    <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
-  </ng-container>
 
-  <!-- Definizione delle colonne -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
+
+
+<section class="table-container">
+<table class="table" mat-table  [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
+<!-- Colonna Film -->
+<ng-container matColumnDef="film">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header> Film </th>
+  <td mat-cell *matCellDef="let rental"> {{ rental.film.title }} </td>
+</ng-container>
+
+<!-- Colonna Indirizzo -->
+<ng-container matColumnDef="address">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header> Indirizzo </th>
+  <td mat-cell *matCellDef="let rental"> {{ rental.address.address }} </td>
+</ng-container>
+
+<!-- Colonna Pagamento -->
+<ng-container matColumnDef="payment">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagamento </th>
+  <td mat-cell *matCellDef="let rental"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
+</ng-container>
+
+<!-- Colonna Noleggio -->
+<ng-container matColumnDef="rental">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header> Data noleggio </th>
+  <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
+</ng-container>
+
+<!-- Colonna Noleggio -->
+<ng-container matColumnDef="action">
+  <th mat-header-cell *matHeaderCellDef>  </th>
+  <td mat-cell *matCellDef="let rental"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
+</ng-container>
+
+<!-- Definizione delle colonne -->
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
 </table>
+
+</section>
