--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -51,7 +51,7 @@
 
 <!-- Colonna Noleggio -->
 <ng-container matColumnDef="action">
-  <th mat-header-cell *matHeaderCellDef>  </th>
+  <th mat-header-cell *matHeaderCellDef> Action </th>
   <td mat-cell *matCellDef="let rental"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
 </ng-container>
 
